2001-10-20  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (handle_load_dll): Avoid strlwr'ing loaded DLLs or cygwin
	may not be able to read them in certain situations.

2001-10-18  Andrew Cagney  <ac131313@redhat.com>

	* config/powerpc/nbsd.mt (SIM_OBS, SIM): Define.
	* config/powerpc/linux.mt (SIM, SIM_OBS): Ditto

2001-10-18  Andrew Cagney  <ac131313@redhat.com>

	* README: Mention problems with HP/UX.

2001-10-16  Andrew Cagney  <ac131313@redhat.com>

	Based on code by John Moore <jmore@redhat.com>:
	
	* utils.c (core_addr_to_string): New function for conversion of
	CORE_ADDR to string.
	(string_to_core_addr): New function to convert from string to
	CORE_ADDR.
	* defs.h: Added extern statements for the above.

2001-10-17  Jason Molenda  (jason-cl@molenda.com)

	* symtab.c (lookup_block_symbol):  Break out of linear search
        if we're past the range of possible matches.

2001-10-16  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Improve logic for avoiding
	load of already loaded DLL.
	(register_loaded_dll): Convert loaded DLL name to "posix" format or it
	will confuse subsequent opening of the filename due to dos paths.
	(dll_symbol_command): Pass from_tty parameter to safe_symbol_file_add.

2001-10-15  Elena Zannoni  <ezannoni@redhat.com>

        * symtab.c (lookup_block_symbol): Update comment.

2001-10-15  Andrew Cagney  <ac131313@redhat.com>

	* value.h (value_as_address): Rename value_as_pointer.
	* eval.c, findvar.c, gnu-v2-abi.c, gnu-v3-abi.c, jv-lang.c,
	jv-valprint.c, printcmd.c, stack.c, top.c, valarith.c, valops.c,
	values.c: Update.

202001-10-15  Jim Ingham  <jingham@inghji.apple.com>

        * valarith.c (value_sub): Don't pass a raw type to
        value_from_pointer, it has to go through check_typedef first.

2001-10-15  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (fallbackdefault): Set to one when predefault is
	empty.
	* gdbarch.h: Regenerate.
