@@ -1,3 +1,10 @@
+2001-10-20  Andrew Cagney  <ac131313@redhat.com>
+
+	* alpha-nat.c: Include <alpha/coreregs.h> instead of
+	<machine/reg.h>.
+	(fetch_osf_core_registers): Define core_reg_mapping in a way that
+	works on OSF5 as well as previous OSF versions.
+
 2001-10-20  Christopher Faylor  <cgf@redhat.com>
 
 	* win32-nat.c (handle_load_dll): Avoid strlwr'ing loaded DLLs or cygwin
